--- a/.biomeignore
+++ b/.biomeignore
@@ -2,3 +2,5 @@ dist/**
 coverage/**
 node_modules/**
 src/baseline/features.ts
+src/baseline/data/descriptors.api.ts
+src/baseline/data/descriptors.jsbi.ts
