chore: Rename `baseline` option to `available` for consistency across configurations
## Changes
- **Configuration**: Updated all instances of the `baseline` option to `available` in ESLint configurations and related files for better alignment
- **Backward Compatibility**: Maintained `baseline` as an alias for `available` to ensure existing configurations continue to function.

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,18 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.2.3/schema.json",
+  "files": {
+    "includes": [
+      "**",
+      "!dist",
+      "!coverage",
+      "!node_modules",
+      "!docs/website/.next",
+      "!src/baseline/features.ts",
+      "!src/baseline/data/descriptors.api.ts",
+      "!src/baseline/data/descriptors.jsbi.ts"
+    ],
+    "ignoreUnknown": true
+  },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
