chore(deps): update web-features to version v3.0.0

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "tsdown": "v0.15.1",
     "typescript": "^5.4.0",
     "vitest": "^3.2.4",
-    "web-features": "^2.47.0"
+    "web-features": "3.0.0"
   },
   "peerDependencies": {
     "eslint": ">=8.57.0 <10"
