feat(core,ci,scripts): generalized delegate resolver + extension API; harden mapping drift + pipeline; pin Node; add tests; tidy lints
core/orchestrator:
- Unify delegate resolution via resolveDelegateRule(); register self rules once at module load
- Add BASELINE_DEBUG=1 diagnostics with resolver aliases and entry counts
- Neutralize es-x ecmaVersion gating by setting parserOptions.ecmaVersion: 3 on delegates, keeping Baseline policy in this plugin

resolver utils:
- Add src/utils/rule-resolver.ts for robust ESM/CJS plugin rule normalization
- Add src/utils/delegate-resolver.ts:
  • Built-in resolvers: es-x, core, self
  • registerResolver(alias, fn) extension API for future/third-party plugin resolvers
  • listResolverPlugins() for debug logging

mapping:
- Introduce typed mapping contracts src/baseline/mapping/types.ts; enforce with satisfies SyntaxMapping
- Keep mapping keys current (e.g. numeric-separators), retain consistent Baseline messaging

scripts:
- scripts/build-features.mjs: Support group as string or array (javascript), emit single source features.javascript.ts
- scripts/check-mapping.mjs: Read TS mirrors directly, robust key extraction, output drift-report.json
- scripts/verify-features.mjs: Read from features.javascript.ts

CI:
- Pin Node to 22.12.0 in ci.yml and mapping-drift.yml for deterministic ESM/CJS behavior and tooling stability

tests:
- Add tests/delegate-resolver.spec.ts (core + custom resolver)
- Add tests/rule-resolver.spec.ts (ESM/CJS shapes)
- Update tests/esx.spec.ts (template literal escaping, numeric-separators)

chores:
- Add devDependencies.eslint@^9.12.0 to stabilize local/CI test runner
- Minor lint/format tidy across website/docs

--- a/.github/workflows/mapping-drift.yml
+++ b/.github/workflows/mapping-drift.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Node (LTS)
         uses: actions/setup-node@v5
         with:
-          node-version: 22
+          node-version: 22.12.0
 
       - name: Install
         run: pnpm i --frozen-lockfile
@@ -63,7 +63,7 @@ jobs:
               const exists = issues.find(i => i.title === title);
               if (exists) continue;
 
-              const body = `Missing mapping for web-features ID:\n\n- id: \`${m.id}\`\n- name: \`${m.name}\`\n\nAdd a delegate entry to \`src/baseline/mapping.mjs\` that links this feature to an ESLint rule.\n\nAcceptance criteria\n- mapping.mjs updated\n- tests added (or updated)`;
+              const body = `Missing mapping for web-features ID:\n\n- id: \`${m.id}\`\n- name: \`${m.name}\`\n\nAdd a delegate entry to \`src/baseline/mapping/syntax.ts\` that links this feature to an ESLint rule.\n\nAcceptance criteria\n- mapping updated\n- tests added (or updated)`;
 
               await github.rest.issues.create({ owner, repo, title, body, labels });
             }
