--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-es-x": "^9.1.0"
   },
   "devDependencies": {
+    "eslint": "^9.12.0",
     "@biomejs/biome": "^2.2.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -59,7 +60,7 @@
   },
   "packageManager": "pnpm@10.15.1",
   "engines": {
-    "node": ">=20.19.0"
+    "node": ">=20.19.0 <22 || >=22.12.0"
   },
   "author": {
     "name": "Ryuya",
