--- a/package.json
+++ b/package.json
@@ -38,21 +38,21 @@
     "verify:features": "node scripts/data/verify-features.mjs"
   },
   "dependencies": {
-    "eslint-plugin-es-x": "^9.1.0"
+    "eslint-plugin-es-x": "^9.1.1"
   },
   "devDependencies": {
-    "eslint": "^9.12.0",
-    "@biomejs/biome": "^2.2.4",
+    "@biomejs/biome": "^2.2.6",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/eslint": "^9.6.1",
-    "@types/node": "^24.4.0",
-    "@typescript-eslint/parser": "^8.43.0",
-    "semantic-release": "^24.2.7",
-    "tsdown": "v0.15.1",
-    "typescript": "^5.4.0",
+    "@types/node": "^24.8.1",
+    "@typescript-eslint/parser": "^8.46.1",
+    "eslint": "^9.37.0",
+    "semantic-release": "^24.2.9",
+    "tsdown": "0.15.1",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4",
-    "web-features": "3.0.0"
+    "web-features": "3.5.0"
   },
   "peerDependencies": {
     "eslint": ">=8.57.0 <10"
