chore(package): add new data generation and update baseline scripts

--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "format": "biome format --write .",
     "format:check": "biome check --formatter-enabled=true --linter-enabled=false .",
     "format:imports": "biome check --fix --unsafe .",
+    "gen:data": "pnpm  gen:features && pnpm  gen:features:api && pnpm  gen:features:jsbi && pnpm  gen:descriptors",
     "gen:coverage": "node scripts/coverage/generate-coverage.mjs",
     "gen:features": "node scripts/data/build-features.mjs",
     "gen:features:api": "node scripts/data/build-features-api.mjs",
     "gen:features:jsbi": "node scripts/data/build-features-jsbi.mjs",
     "gen:descriptors": "node scripts/data/build-descriptors.mjs",
-    "pretest": "pnpm -s build",
+    "update:baseline": "pnpm  gen:data && pnpm  gen:coverage",
+    "pretest": "pnpm  build",
     "test": "vitest run",
-    "test:watch": "pnpm -s build && vitest",
+    "test:watch": "pnpm  build && vitest",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "verify:features": "node scripts/data/verify-features.mjs"
   },
