--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       contents: write
       issues: write
       pull-requests: write
-      # id-token: write  # TODO OIDC
+      id-token: write  # OIDC for npm provenance
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -31,6 +31,8 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: 22
+          registry-url: 'https://registry.npmjs.org/'
+          always-auth: true
           cache: 'pnpm'
 
       - name: Install latest npm
@@ -41,6 +43,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+
+      - name: Verify signatures
+        run: npm audit signatures || true
 
       - name: Generate features (web-features -> features.ts)
         run: pnpm gen:features
@@ -55,8 +60,9 @@ jobs:
         run: pnpm gen:coverage
 
 
-      - name: Release with semantic-release
+      - name: Release with semantic-release (npm provenance)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_CONFIG_PROVENANCE: true
         run: npx semantic-release
