--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       id-token: write  # OIDC for npm provenance
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           fetch-depth: 0
           persist-credentials: false
@@ -28,7 +28,7 @@ jobs:
           corepack prepare pnpm@10.15.1 --activate
         
       - name: Setup Node
-        uses: actions/setup-node@v5
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version: 22
           registry-url: 'https://registry.npmjs.org/'
@@ -45,7 +45,7 @@ jobs:
         run: pnpm i --frozen-lockfile
 
       - name: Verify signatures
-        run: npm audit signatures || true
+        run: npm audit signatures
 
       - name: Generate features (web-features -> features.ts)
         run: pnpm gen:features
@@ -59,10 +59,8 @@ jobs:
       - name: Generate coverage report (docs/coverage.md)
         run: pnpm gen:coverage
 
-
       - name: Release with semantic-release (npm provenance)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NPM_CONFIG_PROVENANCE: true
-        run: npx semantic-release
+        run: npx semantic-release@24.2.9
