--- a/.releaserc.json
+++ b/.releaserc.json
@@ -13,12 +13,7 @@
         "changelogFile": "CHANGELOG.md"
       }
     ],
-    [
-      "@semantic-release/npm",
-      {
-        "npmPublish": true
-      }
-    ],
+    "./scripts/release/exec.mjs",
     [
       "@semantic-release/git",
       {
