--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "provenance": true
+    "provenance": true,
+    "access": "public"
   }
 }
