--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,14 @@ on:
   pull_request:
     branches: [ "**" ]
 
+permissions:
+  contents: read
+
 jobs:
   format:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -33,6 +38,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: [format]
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v5
